--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "express": "^4.17.3",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.4"
+    "mongoose": "^6.2.4",
+    "yarn": "^1.22.17"
   },
   "devDependencies": {
     "eslint": "^8.10.0",
