--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 JWT_SECRET=somethingsecret
 MONGODB_URI_LOCAL = mongodb://localhost/kodius
-MONGODB_URI = mongodb+srv://kodius:somethingsecret@cluster0.ho6am.mongodb.net/kodius?retryWrites=true&w=majority
+MONGODB_URI = mongodb+srv://kodius:somethingsecret@kodius.ho6am.mongodb.net/kodius?retryWrites=true&w=majority
