--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 
   "scripts": {
     "build": "cd backend && npm install && cd ../frontend && npm install && npm run build",
-    "start": "node backend/server.js",
+    "start": "nodemon --watch backend --exec node --experimental-modules backend/server.js",
     "preinstall": "npx npm-force-resolutions"
   },
   "resolutions": {
