--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/node": "^17.0.21",
     "eslint": "^8.10.0",
     "eslint-plugin-react": "^7.29.3",
+    "eslint-plugin-react-hooks": "^4.4.0",
     "nodemon": "^2.0.15",
     "react-error-overlay": "6.0.9",
     "tslib": "^2.3.1"
