--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "kodius-assignment",
+  "homepage": "https://kresimirgalic32.github.io/kodius-assignment/",
   "type": "module",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "cd backend && npm install && cd ../frontend && npm install && npm run build",
     "start": "node backend/server.js",
     "preinstall": "npx npm-force-resolutions"
@@ -41,6 +44,7 @@
     "eslint": "^8.10.0",
     "eslint-plugin-react": "^7.29.3",
     "eslint-plugin-react-hooks": "^4.4.0",
+    "gh-pages": "^5.0.0",
     "nodemon": "^2.0.15",
     "react-error-overlay": "6.0.9",
     "tslib": "^2.3.1"
